S302T200-374  #time 50m Messaged team about removing the delete tag endpoint because the patch tag endpoint can just set the tage to "none". Made a DTO and validator for the patch tag request body. Wrote unit tests for this and the patch tag controller method. Left notes of what unit tests are left to write. Completed the controller method and started the service method. ?implement ?test
